--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="Sibrand van Straten Example Website" content="">
+  <meta name="Sibrand van Straten" content="">
 
-  <title>Bare - Start Bootstrap Template</title>
+  <title>Sibrand Example Site</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="userfiles/css/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,600,700" rel="stylesheet">
 
 </head>
 
-<body>
+<body class="homepage">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+  <nav class="navbar navbar-expand-lg navbar-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">
+        <figure>
+          <img src="userfiles/imgs/logo_skycrypto.png" alt="logo">
+        </figure>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -32,10 +39,19 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">About us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Webshop</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blockchain</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Project Development</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -45,24 +61,157 @@
     </div>
   </nav>
 
-  <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-        <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
-        <ul class="list-unstyled">
-          <li>Bootstrap 4.2.1</li>
-          <li>jQuery 3.3.1</li>
-        </ul>
+  <!-- Banner Content -->
+  <div class="banner jumbotron jumbotron-fluid">
+    <div class="container">
+      <div id="particles-js"></div>
+      <div class="banner-content">
+        <p class="banner-intro mb-0"><span>CRYPTO</span>CURRENCY</p>
+        <p class="banner-middle">MINING FACILITY SOLUTIONS</p>
+        <p class="banner-buttons">
+          <a class="btn" href="#">Blockchain</a> <a class="btn btn-default" href="/webshop">Webshop</a>
+        </p>
       </div>
     </div>
   </div>
 
+  <!-- Page Content -->
+  <div id="page">
+    <!-- Section Row Main -->
+    <div class="section_row_main">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center pb-5">
+            <div class="content">
+              <h1><span>Our</span>services</h1>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="content">
+              <figure>
+                <img class="img-fluid" src="userfiles/imgs/Hardware.png" alt="hardware.png">
+              </figure>
+              <h2><span>Mining Hardware</span>advice</h2>
+              <p>At Sky crypto, we believe in providing services that are meant to meet your requirements.
+                Our work does not get more than once you have made a purchase with us.
+                We are here to help you and guide you during this journey.
+              </p>
+              <p class="pt-4"><a href="#">Read More ></a></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="content">
+              <figure>
+                <img class="img-fluid" src="userfiles/imgs/Installation.png" alt="installation.png">
+              </figure>
+              <h2><span>Mining Hardware</span>advice</h2>
+              <p>At Sky crypto, we believe in providing services that are meant to meet your requirements.
+                Our work does not get more than once you have made a purchase with us.
+                We are here to help you and guide you during this journey.
+              </p>
+              <p class="pt-4"><a href="#">Read More ></a></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="content">
+              <figure>
+                <img class="img-fluid" src="userfiles/imgs/Facility.png" alt="">
+              </figure>
+              <h2><span>Mining Hardware</span>advice</h2>
+              <p>At Sky crypto, we believe in providing services that are meant to meet your requirements.
+                Our work does not get more than once you have made a purchase with us.
+                We are here to help you and guide you during this journey.
+              </p>
+              <p class="pt-4"><a href="#">Read More ></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section Row 1-->
+    <div class="section_row_1 py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="content">
+              <h2><span>About</span>skycrypto</h2>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="content">
+              <h2><span>Our</span>story</h2>
+              <p><strong>SkyCrypto is a company registered in Amsterdam, Netherlands.</strong></p>
+              <p>We have operated a mining facility since 2016. Initially, we started our mining facility with €9000
+                investment in Bitmain hardware. In the last two years, we have grown from strength to strength.</p>
+              <p><a href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section Row 2 -->
+    <div class="section_row_2 py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <div class="content">
+              <h2>
+                <span>Our</span>solutions
+              </h2>
+              <p>Video hier</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section Row 3 -->
+    <div class="section_row_3 py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="content">
+              <h2><span>Block</span>chain</h2>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="content">
+              <p><strong>
+                  Sky Crypto Blockchain Wallet’s wallet is crafted to provide user-friendly transactions without
+                  compromising security.
+                </strong>
+              </p>
+              <p>The wallets are forged to create privacy for transactions by masking user identities and hence
+                securing your funds. It is created with the purpose of liberating day to day transactions so that a
+                user can send or receive payments without having to give away personal data. In a world of
+                digitization, it is essential to maintain data privacy to avoid any malicious attacks or breach in
+                cybersecurity.</p>
+              <p><a href="#">Read more
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section Row 4 -->
+    <div class="section_row_4 py-5">
+      <div class="container">
+        <div class="row">
+          <figure>
+            <img src="#" alt="">
+          </figure>
+        </div>
+      </div>
+    </div>
+
+  </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="userfiles/js/particles.js"></script>
 </body>
 
 </html>
