add alot of css and html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <!-- Section Row 1-->
-    <div class="section_row_1 py-5">
+    <div class="section_row_1">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -144,7 +144,7 @@
               <p><strong>SkyCrypto is a company registered in Amsterdam, Netherlands.</strong></p>
               <p>We have operated a mining facility since 2016. Initially, we started our mining facility with €9000
                 investment in Bitmain hardware. In the last two years, we have grown from strength to strength.</p>
-              <p><a href="#">Read more</a>
+              <strong><a href="#">Read more</a></strong>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
     </div>
 
     <!-- Section Row 2 -->
-    <div class="section_row_2 py-5">
+    <div class="section_row_2">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
@@ -160,7 +160,10 @@
               <h2>
                 <span>Our</span>solutions
               </h2>
-              <p>Video hier</p>
+              <div class="embed-responsive embed-responsive-16by9 mt-5">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"
+                  allowfullscreen></iframe>
+              </div>
             </div>
           </div>
         </div>
@@ -168,7 +171,7 @@
     </div>
 
     <!-- Section Row 3 -->
-    <div class="section_row_3 py-5">
+    <div class="section_row_3">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -188,23 +191,52 @@
                 user can send or receive payments without having to give away personal data. In a world of
                 digitization, it is essential to maintain data privacy to avoid any malicious attacks or breach in
                 cybersecurity.</p>
-              <p><a href="#">Read more
+              <strong><a href="#">Read more</a></strong>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Section Row 4 -->
-    <div class="section_row_4 py-5">
-      <div class="container">
-        <div class="row">
-          <figure>
-            <img src="#" alt="">
-          </figure>
+    <footer>
+      <div class="col-md-12">
+        <div class="footer_section_main py-5">
+          <div class="container">
+            <div class="row">
+              <div class="content">
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/amazon.svg" alt="amazon.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/american_express.svg" alt="american_express.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/bitcoin.svg" alt="bitcoin.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/bitcoin_cash.svg" alt="bitcoin_cash.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/ethereum.svg" alt="ethereum.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/litecoin.svg" alt="litecoin.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/mastercard.svg" alt="mastercard.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/paypal.svg" alt="paypal.svg">
+                </figure>
+                <figure>
+                  <img class="img-fluid" src="userfiles/imgs/visa.svg" alt="visa.svg">
+                </figure>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
 
   </div>
   <!-- Bootstrap core JavaScript -->
