--- a/index.html
+++ b/index.html
@@ -14,52 +14,58 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="userfiles/css/styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous">
 
 </head>
 
 <body class="homepage">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark static-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <figure>
-          <img src="userfiles/imgs/logo_skycrypto.png" alt="logo">
-        </figure>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Webshop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Blockchain</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Project Development</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark static-top mt-3">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <figure>
+            <img src="userfiles/imgs/logo_skycrypto.png" alt="logo">
+          </figure>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blockchain</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Project Development</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="socialmedia-header">
+          <a href="https://www.facebook.com/sibrand.vanstraten" target="_blank" rel="noreferrer noopener"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://github.com/GewoonSibrand" target="_blank" rel="noreferrer noopener"><i class="fab fa-github"></i></a>
+          <a href="https://codepen.io/Sibrand/" target="_blank" rel="noreferrer noopener"><i class="fab fa-codepen"></i></a>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
 
   <!-- Banner Content -->
   <div class="banner jumbotron jumbotron-fluid">
