fixed aos animation bug

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="banner jumbotron jumbotron-fluid">
         <div class="container">
           <div id="particles-js"></div>
-          <div class="banner-content" data-aos="fade-up">
+          <div class="banner-content" data-aos="zoom-in">
             <p class="banner-intro mb-0"><span>CRYPTO</span>CURRENCY</p>
             <p class="banner-middle">MINING FACILITY SOLUTIONS</p>
             <p class="banner-buttons">
