change to youtube video and responsive  animation fixes

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <span>Our</span>solutions
                   </h2>
                   <div class="embed-responsive embed-responsive-16by9 mt-5" data-aos="flip-down">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yIL9wLxG01M?rel=0"
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0_q0QhPXjLs?rel=0"
                       allowfullscreen></iframe>
                   </div>
                 </div>
