change divs to section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- Page Content -->
       <div id="page">
         <!-- Section Row Main -->
-        <div class="section_row_main">
+        <section class="section_row_main">
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center pb-5" data-aos="fade-down">
@@ -140,7 +140,7 @@
         </div>
 
         <!-- Section Row 1-->
-        <div class="section_row_1">
+        <section class="section_row_1">
           <div class="container">
             <div class="row">
               <div class="col-md-6" data-aos="fade-right">
@@ -163,7 +163,7 @@
         </div>
 
         <!-- Section Row 2 -->
-        <div class="section_row_2">
+        <section class="section_row_2">
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center" data-aos="fade-down">
@@ -182,7 +182,7 @@
         </div>
 
         <!-- Section Row 3 -->
-        <div class="section_row_3">
+        <section class="section_row_3">
           <div class="container">
             <div class="row">
               <div class="col-md-6" data-aos="fade-left">
