--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
 
         <!-- Section Row 1-->
         <section class="section_row_1">
@@ -160,7 +160,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
 
         <!-- Section Row 2 -->
         <section class="section_row_2">
@@ -179,7 +179,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
 
         <!-- Section Row 3 -->
         <section class="section_row_3">
@@ -208,7 +208,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <footer>
         <div class="col-md-12">
