change to aos effects

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
         <section class="section_row_3">
           <div class="container">
             <div class="row">
-              <div class="col-md-6" data-aos="fade-left">
+              <div class="col-md-6" data-aos="fade-down">
                 <div class="content">
                   <h2><span>Block</span>chain</h2>
                 </div>
               </div>
-              <div class="col-md-6" data-aos="fade-right">
+              <div class="col-md-6" data-aos="fade-up">
                 <div class="content">
                   <p><strong>
                       Sky Crypto Blockchain Wallet’s wallet is crafted to provide user-friendly transactions without
