homepage aos fix to all pages

--- a/about-us.html
+++ b/about-us.html
@@ -84,7 +84,7 @@
             <!-- Page Content -->
             <div id="page">
                 <!-- Section Row Main -->
-                <div class="section_row_main">
+                <section class="section_row_main">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6" data-aos="fade-right">
@@ -110,17 +110,17 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
 
-                <div class="section_row_1">
+                <section class="section_row_1">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-6" data-aos="fade-right">
+                            <div class="col-md-6" data-aos="fade-down">
                                 <div class="content">
                                     <h2><span>More</span>Text</h2>
                                 </div>
                             </div>
-                            <div class="col-md-6" data-aos="fade-left">
+                            <div class="col-md-6" data-aos="fade-up">
                                 <div class="content">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et augue vel
                                         nulla
@@ -138,7 +138,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
 
 
             </div>
