--- a/blockchain.html
+++ b/blockchain.html
@@ -83,7 +83,7 @@
             <!-- Page Content -->
             <div id="page">
                 <!-- Section Row Main -->
-                <div class="section_row_main">
+                <section class="section_row_main">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6" data-aos="fade-right">
@@ -109,9 +109,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
 
-                <div class="section_row_1">
+                <section class="section_row_1">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6" data-aos="fade-right">
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
 
 
             </div>
