--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
                     <div class="container">
                         <a class="navbar-brand" href="#">
                             <figure>
-                                <img src="userfiles/imgs/logo_skycrypto.png" alt="logo">
+                                <img src="userfiles/imgs/logo_sibcrypto.png" alt="logo">
                             </figure>
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -57,7 +57,7 @@
                                     <a class="nav-link" href="project-development.html">Project Development</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
+                                    <a class="nav-link" href="https://www.linkedin.com/in/sibrand-van-straten-217092123/" target="_blank">Contact</a>
                                 </li>
                             </ul>
                         </div>
