--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="container">
             <a class="navbar-brand" href="#">
               <figure>
-                <img src="userfiles/imgs/logo_skycrypto.png" alt="logo">
+                <img src="userfiles/imgs/logo_sibcrypto.png" alt="logo">
               </figure>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -58,7 +58,7 @@
                   <a class="nav-link" href="project-development.html">Project Development</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="https://www.linkedin.com/in/sibrand-van-straten-217092123/" target="_blank">Contact</a>
                 </li>
               </ul>
             </div>
@@ -102,7 +102,7 @@
                     <img class="img-fluid" src="userfiles/imgs/Hardware.png" alt="hardware.png">
                   </figure>
                   <h2><span>Mining Hardware</span>advice</h2>
-                  <p>At Sky crypto, we believe in providing services that are meant to meet your requirements.
+                  <p>At Sib crypto, we believe in providing services that are meant to meet your requirements.
                     Our work does not get more than once you have made a purchase with us.
                     We are here to help you and guide you during this journey.
                   </p>
@@ -115,7 +115,7 @@
                     <img class="img-fluid" src="userfiles/imgs/Installation.png" alt="installation.png">
                   </figure>
                   <h2><span>Mining Hardware</span>advice</h2>
-                  <p>At Sky crypto, we believe in providing services that are meant to meet your requirements.
+                  <p>At Sib crypto, we believe in providing services that are meant to meet your requirements.
                     Our work does not get more than once you have made a purchase with us.
                     We are here to help you and guide you during this journey.
                   </p>
@@ -128,7 +128,7 @@
                     <img class="img-fluid" src="userfiles/imgs/Facility.png" alt="">
                   </figure>
                   <h2><span>Mining Hardware</span>advice</h2>
-                  <p>At Sky crypto, we believe in providing services that are meant to meet your requirements.
+                  <p>At Sib crypto, we believe in providing services that are meant to meet your requirements.
                     Our work does not get more than once you have made a purchase with us.
                     We are here to help you and guide you during this journey.
                   </p>
@@ -145,13 +145,13 @@
             <div class="row">
               <div class="col-md-6" data-aos="fade-right">
                 <div class="content">
-                  <h2><span>About</span>skycrypto</h2>
+                  <h2><span>About</span>Sibcrypto</h2>
                 </div>
               </div>
               <div class="col-md-6" data-aos="fade-left">
                 <div class="content">
                   <h2><span>Our</span>story</h2>
-                  <p><strong>SkyCrypto is a company registered in Amsterdam, Netherlands.</strong></p>
+                  <p><strong>SibCrypto is a company registered in Amsterdam, Netherlands.</strong></p>
                   <p>We have operated a mining facility since 2016. Initially, we started our mining facility with
                     €9000
                     investment in Bitmain hardware. In the last two years, we have grown from strength to strength.</p>
@@ -193,7 +193,7 @@
               <div class="col-md-6" data-aos="fade-up">
                 <div class="content">
                   <p><strong>
-                      Sky Crypto Blockchain Wallet’s wallet is crafted to provide user-friendly transactions without
+                      Sib Crypto Blockchain Wallet’s wallet is crafted to provide user-friendly transactions without
                       compromising security.
                     </strong>
                   </p>
